add projects to front page

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -39,7 +39,7 @@ smartTOCHideUnfocusedChildren = false
   showScrollToTop = true
 
 [homepage]
-  layout = "background" # valid options: page, profile, hero, card, background, custom
+  layout = "custom" # valid options: page, profile, hero, card, background, custom
   homepageImage = "/img/pentacrest.jpg" # used in: background, hero, and card
   showRecent = false
   showRecentItems = 6
