biuld: add github-pages environment to ci

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,6 +19,8 @@ jobs:
   build_website:
     name: Build website
     runs-on: ubuntu-22.04
+    environment:
+      name: github-pages
     steps:
       # Configure the runner
       - name: git checkout
