--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-theme="blowfish"
+theme=["blowfish","hugo-simplecite"]
 baseURL = "https://uiowa-applied-topology.github.io"
 languageCode = "en"
 title = "UIAT"
