Adds people page contents

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -21,8 +21,8 @@ disableImageOptimization = true
 disableTextInHeader = false
 # backgroundImageWidth = 1200
 
-defaultBackgroundImage = "/img/background.svg"
-defaultFeaturedImage = "/img/featured.svg"
+defaultBackgroundImage = "/img/pentacrest.jpg"
+defaultFeaturedImage = "/img/logo.svg"
 
 highlightCurrentMenuArea = true
 smartTOC = true
@@ -55,7 +55,7 @@ smartTOCHideUnfocusedChildren = false
   showLikes = false
   showDateOnlyInArticle = false
   showDateUpdated = false
-  showAuthor = false
+  showAuthor = true
   # showAuthorBottom = false
   showHero = true
   heroStyle = "background" # valid options: basic, big, background, thumbAndBackground
@@ -74,7 +74,7 @@ smartTOCHideUnfocusedChildren = false
   showRelatedContent = true
   relatedContentLimit = 6
   showTaxonomies = false
-  showAuthorsBadges = true 
+  showAuthorsBadges = true
   showWordCount = false
   sharingLinks = []
   showZenMode = false
