add basic author info

--- a/data/authors/george_clare_kennedy.yaml
+++ b/data/authors/george_clare_kennedy.yaml
@@ -1,7 +1,8 @@
-name: George Clare Kennedy
+name: George F. Clare Kennedy
 image: https://math.uiowa.edu/sites/math.uiowa.edu/files/styles/square__768_x_768/public/2024-10/George_Clare_Kennedy.png?h=97848506&itok=L1CX_d94
 fullbio: |-
   I am a PhD candidate in Mathematics at the University of Iowa, specializing in
-  topological data analysis.
+  topological data analysis, data visualization, and interdisciplinary communication. My primary research uses Mapper to explore functional clustering of tiny, antibody-like molecules called aptamers.
 social:
   - link: 'https://math.uiowa.edu/people/george-clare-kennedy'
+  - github: 'https://github.com/gergill'
