--- a/data/authors/george_clare_kennedy.yaml
+++ b/data/authors/george_clare_kennedy.yaml
@@ -1,5 +1,5 @@
 name: George F. Clare Kennedy
-image: https://math.uiowa.edu/sites/math.uiowa.edu/files/styles/square__768_x_768/public/2024-10/George_Clare_Kennedy.png?h=97848506&itok=L1CX_d94
+image: https://avatars.githubusercontent.com/u/33237655?v=4
 fullbio: |-
   I am a PhD candidate in Mathematics at the University of Iowa, specializing in
   topological data analysis, data visualization, and interdisciplinary communication. My primary research uses Mapper to explore functional clustering of tiny, antibody-like molecules called aptamers.
